--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta charset="UTF-8">
   <title>D3 Challenge</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/d3Style.css">
-  <script src="app.js"></script>
-  <link rel="stylesheet" href="app.css">
-
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/d3Style.css">
+  
 </head>
 
 <body>
@@ -20,16 +18,17 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12  col-md-9">
+      <div class="col-xs-12  col-md-10">
         <div id="scatter">
-          <!-- We append our chart here. -->
+          <!-- chart here. -->
         </div>
+        <hr>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12  col-md-9">
+      <div class="col-xs-12  col-md-10">
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
+          <h2>Correlations Discovered Between Health Risks, Age & Income</h2>
           <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
             quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
 
@@ -39,19 +38,20 @@
           <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
             quam, feugiat vitae, ultricies eget, tempor sit amet, ante. .</p>
         </div>
+        <hr>
       </div>
     </div>
   </div>
 
   <!-- Footer-->
   <div id="footer">
-    <p>D3 Challenge 2020 Cohort</p>
+    <p>D3 Challenge 2020 Shawn B</p>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="./js/app.js"></script>
 
 </body>
 
